# ai-readiness-checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.claude/skills/ai-readiness-checker/: skill.md
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-access-signals/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-schema-extraction/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-content-analysis/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-scorer-report/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-pipeline-cli/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-RESEARCH.md  06-REVIEWS.md  06-VALIDATION.md
.planning/phases/07-streamlit-dashboard/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-PATTERNS.md  07-RESEARCH.md  07-UI-SPEC.md  07-VALIDATION.md
.planning/phases/08-test-suite/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
src/checker/: __init__.py  __main__.py  access_fetcher.py  agent.py  api_server.py  cli_renderer.py  content_analyzer.py  contracts.py  crawler.py  llm_backends.py  llms_txt.py  mcp_server.py  orchestrator.py  robots_txt.py  schema_analyzer.py  scorer.py
src/checker/skills/: __init__.py  explain_changes.py  fix_headings.py  fix_llms_txt.py  fix_qa.py  fix_readability.py  fix_schema.py  render_preview.py
tests/: conftest.py  test_agent.py  test_api_server.py  test_cli.py  test_cli_renderer.py  test_content.py  test_crawler.py  test_dashboard.py  test_llm_backends.py  test_llms.py  test_orchestrator.py  test_robots.py  test_schema.py  test_scorer.py  test_skills.py
tests/fixtures/agent/: report_failing.json  report_passing.json  sample_page.html
