[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-readiness-checker"
version = "0.1.0"
description = "Open-source tool that scores any website's AI search engine visibility with CLI and Streamlit UI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "AI Readiness Checker contributors"}
]
keywords = ["ai", "seo", "search", "llm", "claude", "chatgpt", "structured-data", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32,<3.0",
    "beautifulsoup4>=4.14,<5.0",
    "lxml>=4.9,<7.0",
    "httpx>=0.28,<1.0",
    "textstat>=0.7,<1.0",
    "extruct>=0.17,<1.0",
    "rich>=13.0,<14.0",
    "streamlit>=1.30,<2.0",
    "pandas>=2.0,<3.0",
    "mcp>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.urls]
Homepage = "https://github.com/kf031/ai-readiness-checker"
Repository = "https://github.com/kf031/ai-readiness-checker"
Issues = "https://github.com/kf031/ai-readiness-checker/issues"

[project.scripts]
checker = "checker.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff", "build>=1.0", "twine>=5.0", "pytest-rerunfailures>=14.0"]
nlp = ["spacy>=3.7,<4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
